# Drone-Detection

DetectionListener/: listener_pose.py
DroneDetect/: drone_detect.py
DroneFollower/: README.md  package.xml  setup.cfg  setup.py
DroneFollower/drone_follower/: __init__.py  drone_follower_node.py
DroneFollower/resource/: drone_follower
drone_detection_follower1302/: package.xml  setup.py
drone_detection_follower1302/drone_detection_follower/: drone_detection_follower.py
drone_detection_follower1302/launch/: detection_follower.launch.py
drone_follower1253/: package.xml  setup.py
drone_follower1253/drone_follower/: drone_detection_follower.py  drone_follower_node.py
drone_follower1253/launch/: detection_follower.launch.py
