<?xml version="1.0"?>
<package format="3">
  <name>drone_follower</name>
  <version>0.0.1</version>
  <description>Drone follower node: follows detected drone in Gazebo using pose topics and YOLO detections.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
</package>
